@startuml
hide circle
hide methods
skinparam linetype ortho

entity comments {
  *id : bigint
  --
  content : text
  user_id : bigint (FK)
  event_id : bigint (FK)
  created_at : datetime
  updated_at : datetime
}

entity events {
  *id : bigint
  --
  title : string
  date : datetime
  location : string
  description : text
  price : string
  image : string
  liked : boolean
  likes_count : bigint
  user_id : bigint (FK)
  created_at : datetime
  updated_at : datetime
}

entity likes {
  *id : bigint
  --
  user_id : bigint (FK)
  event_id : bigint (FK)
  created_at : datetime
  updated_at : datetime
}

entity users {
  *id : bigint
  --
  name : string
  email : string
  password_digest : string
  thumbnail : string
  description : text
  authentication_token : string
  created_at : datetime
  updated_at : datetime
}


comments }|--|| events
comments }|--|| users

likes }|--|| events
likes }|--|| users

events }|--|| users

@enduml